add_subdirectory( http_server )
add_subdirectory( keystore )
add_subdirectory( rpc_client )
add_subdirectory( rpc_server )
add_subdirectory( sandbox )
add_subdirectory( event_service )
add_subdirectory( test_module )
add_subdirectory( version_manager )
add_subdirectory( router_module )
add_subdirectory( balancer_module )
add_subdirectory( block_module )